--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@ padding-left: 15px;
                 <option value="Cuerpo a cuerpo" data-filter="eor-f3">Cuerpo a Cuerpo</option>
                 <option value="Sables" data-filter="eor-f4">Sables</option>
                 <option value="">---NAVES---</option>
-                <option value="f1" data-filter="eor-f1">-</option>
-                <option value="f2" data-filter="eor-f2">-</option>
-                <option value="f3" data-filter="eor-f3">-</option>
-                <option value="f4" data-filter="eor-f4">-</option>
+                <option value="Naves espaciales" data-filter="eor-f1">Naves espaciales</option>
+                <option value="Vehículos terrestres" data-filter="eor-f2">Vehículos terrestres</option>
+                <option value="Vehículos acuáticos" data-filter="eor-f3">Vehículos acuáticos</option>
+                <option value="Monturas" data-filter="eor-f4">Monturas</option>
                 <option value="">---MISCELÁNEO---</option>
                 <option value="Consumibles" data-filter="eor-f1">Consumibles</option>
                 <option value="Vehículos" data-filter="eor-f2">Vehículos</option>
