--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ padding-left: 15px;
                 <option value="Monturas" data-filter="eor-f4">Monturas</option>
                 <option value="">---MISCELÁNEO---</option>
                 <option value="Consumibles" data-filter="eor-f1">Consumibles</option>
-                <option value="Vehículos" data-filter="eor-f2">Vehículos</option>
+                <option value="Viviendas" data-filter="eor-f2">Viviendas</option>
                 <option value="Mejoras" data-filter="eor-f3">Mejoras</option>
                 <option value="Gadgets" data-filter="eor-f4">Gadgets</option>
               </select></label>
